tmpfiles: don't fail if we cannot create a subvolume because a file system is read-only but a dir already exists anyway

https://bugs.freedesktop.org/show_bug.cgi?id=90281